2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* gnome-init.[ch], gnome-util.h, parse-path.cP: replace
	  references to .gnome and .gnome_private with GNOME_DOT_GNOME
	  and GNOME_DOT_GNOME_PRIVATE respectivly. Define these macros
	  in gnome-init.h (to be .gnome2 and .gnome2_private for now)
	  and include this in gnome-util.h, which was the only place
	  that didn't have it.

	* gnome-program.h: A documentation fix I had lying around in my
	  tree for some reason.

Fri Nov 30 16:59:01 2001  George Lebl <jirka@5z.com>

	* gnome-init.c: g_object_set is a vararg function so null terminate
	  the argument list.  Yay for no typesafety and corrupted stacks.

Tue Nov 27 15:41:43 2001  George Lebl <jirka@5z.com>

	* gnome-util.[ch], gnome-exec.c, gnome-url.c: move
	  gnome_is_program_in_path to deprecated and make it a macro
	  that just resolves to g_find_program_in_path which is
	  smarter and all that good stuff.

2001-11-21  Michael Meeks  <michael@ximian.com>

	* gnome-program.c (gnome_program_preinit),
	(gnome_program_initv, gnome_program_instance_init),
	(gnome_program_postinit): remove _massive_ debug spew,
	all trying ( unsuccessfully ) to discover that it is in
	fact pango that takes > 1 sec. to initialize - which it
	does idly.

Tue Nov 20 15:44:49 2001  Owen Taylor  <otaylor@redhat.com>

	* gnome-marshal-main.c gnome-program.c test-libgnome.c: 
	Remove excess gobject/* includes.

2001-11-14  Michael Meeks  <michael@ximian.com>

	* gnome-macros.h: update for new bonobo.

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* gnome-macros.h: Remove the "_HANDLER" from the macro name.
	Before it's too late!

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* gnome-macros.h: Took out unused parameter of the
	GNOME_CLASS_BOILERPLATE macro. Broke macro into pieces so it can
	be reused by bonobo.
	
	* gnome-program.c: Pass one less argument to
	GNOME_CLASS_BOILERPLATE.

Tue Nov 06 23:56:12 2001  George Lebl <jirka@5z.com>
