@@ -6,9 +6,109 @@
       <key>/schemas/desktop/gnome/applications/terminal</key>
       <owner>gnome</owner>
       <type>string</type>
+      <default>gnome-terminal -x</default>
       <locale name="C">
         <short>Terminal application</short>
         <long>Terminal program to use when starting applications that require one</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/editor/exec</applyto>
+      <key>/schemas/desktop/gnome/applications/editor/exec</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <default>gedit</default>
+      <locale name="C">
+        <short>Editor application</short>
+        <long>Command to run as the default GNOME editor</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/editor/accepts_lineno</applyto>
+      <key>/schemas/desktop/gnome/applications/editor/accepts_lineno</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Editor accepts line numbers</short>
+        <long>Whether the default text editor accepts line numbers</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/editor/needs_term</applyto>
+      <key>/schemas/desktop/gnome/applications/editor/needs_term</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Editor needs terminal</short>
+        <long>Whether the default text editor needs a terminal to run</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/browser/exec</applyto>
+      <key>/schemas/desktop/gnome/applications/browser/exec</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <default>mozilla</default>
+      <locale name="C">
+        <short>Default browser</short>
+        <long>Default browser for all URLs</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/browser/needs_term</applyto>
+      <key>/schemas/desktop/gnome/applications/browser/needs_term</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Browser needs terminal</short>
+        <long>Whether the default browser needs a terminal to run</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/browser/nremote</applyto>
+      <key>/schemas/desktop/gnome/applications/browser/nremote</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Browser understands remote</short>
+        <long>Whether the default browser understands netscape remote</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/help_viewer/exec</applyto>
+      <key>/schemas/desktop/gnome/applications/help_viewer/exec</key>
+      <owner>gnome</owner>
+      <type>string</type>
+      <default>nautilus</default>
+      <locale name="C">
+        <short>Default help viewer</short>
+        <long>Default help viewer</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/help_viewer/needs_term</applyto>
+      <key>/schemas/desktop/gnome/applications/help_viewer/needs_term</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Help viewer needs terminal</short>
+        <long>Whether the default help viewer needs a terminal to run</long>
+      </locale>
+    </schema>
+    <schema>
+      <applyto>/desktop/gnome/applications/help_viewer/accepts_urls</applyto>
+      <key>/schemas/desktop/gnome/applications/help_viewer/accepts_urls</key>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Browser understands remote</short>
+        <long>Whether the default help viewer accepts URLs</long>
       </locale>
     </schema>
     <schema>
@@ -49,104 +149,6 @@
       <locale name="C">
         <short>URL handler for gnome help pages</short>
         <long>URL handler for gnome help pages</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/menus-have-icons</applyto>
-      <key>/schemas/desktop/gnome/interface/menus-have-icons</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Icons in menus</short>
-        <long>This allows menu icons to be disabled.</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/menus-have-tearoff</applyto>
-      <key>/schemas/desktop/gnome/interface/menus-have-tearoff</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Tearoff item on menus</short>
-        <long>Menus can be torn off if this setting is true.</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/toolbar-labels</applyto>
-      <key>/schemas/desktop/gnome/interface/toolbar-labels</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Toolbars have labels</short>
-        <long>Toolbars have labels</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/toolbar-detachable</applyto>
-      <key>/schemas/desktop/gnome/interface/toolbar-detachable</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Toolbars are detachable</short>
-        <long>Toolbars are detachable</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/toolbar-relief</applyto>
-      <key>/schemas/desktop/gnome/interface/toolbar-relief</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Toolbars have a relief</short>
-        <long>Toolbars have a relief</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/menubar-detachable</applyto>
-      <key>/schemas/desktop/gnome/interface/menubar-detachable</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Menubars are detachable</short>
-        <long>Menubars are detachable</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/menubar-relief</applyto>
-      <key>/schemas/desktop/gnome/interface/menubar-relief</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Menubars have a relief</short>
-        <long>Menubars have a relief</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/statusbar-meter-on-right</applyto>
-      <key>/schemas/desktop/gnome/interface/statusbar-meter-on-right</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Status bar meter is on the right side</short>
-        <long>Status bar meter is on the right side of the status bar</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/statusbar-interactive</applyto>
-      <key>/schemas/desktop/gnome/interface/statusbar-interactive</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <locale name="C">
-        <short>Status bar is interactive</short>
-        <long>Status bar is interactive</long>
       </locale>
     </schema>
   </schemalist>
